--- a/小米/小米官网.css
+++ b/小米/小米官网.css
@@ -441,7 +441,7 @@ nav{
     width: 1200px;
     height: 630px;
     margin: 0 auto;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     border: none;
     display: flex;
 }
@@ -511,6 +511,233 @@ nav{
     font-size: 14px;
     text-decoration: line-through;
 }
+.peijian{
+    width: 1200px;
+    height: 70px;
+    border: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+.peijian>:nth-child(1){
+    font-weight: 330;
+    font-size: 22px;
+    color: #333;
+}
+.peijian>:nth-child(2){
+    font-size: 16px;
+}
+.peijian-maxbox{
+    width: 1200px;
+    height: 610px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    /* 两边贴边，然后平分剩余空间 */
+    justify-content: space-between;
+    align-content: space-between;
+}
+.peijian-box{
+    width: 19%;
+    height: 49%;
+    border: none;
+    background-color: #fff;
+    transition: .3s;
+}
+.peijian-box:hover,.peijian-maxbox>:nth-child(10)>:nth-child(1):hover,.peijian-maxbox>:nth-child(10)>:nth-child(2):hover{
+    transform: translateY(-2px);
+    box-shadow: 5px 5px 10px #d1d1d1;
+    transition: .3s;
+}
+.peijian-box div{
+    display: flex;
+    justify-content: center;
+}
+.peijian-box div img{
+    width: 80%;
+    height: 65%;
+    border: none;
+}
+.peijian-box>:nth-child(2){
+    width: 100%;
+    border: none;
+    padding: 0 15px 0 15px;
+    text-align: center;
+    font-size: 15px;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.peijian-box>:nth-child(3){
+    font-size: 13px;
+    color: #b0b0b0;
+    margin: 0 0 10px 0;
+}
+.peijian-box>:nth-child(4){
+    color: #ff6700;
+}
+.peijian-maxbox>:nth-child(10){
+    width: 19%;
+    height: 49%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.peijian-maxbox>:nth-child(10)>:nth-child(1){
+    width: 100%;
+    height: 48.5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    transition: .3s;
+}
+.peijian-maxbox>:nth-child(10)>:nth-child(1) span{
+    width: 50%;
+    height: 100%;
+    padding: 8% 5% 8% 8%;
+}
+.peijian-maxbox>:nth-child(10)>:nth-child(1) span p{
+    margin-top: 10%;
+    color: #ff6700;
+    font-size: 17px;
+}
+.peijian-maxbox>:nth-child(10)>:nth-child(1) img{
+    width: 40%;
+    height: 60%;
+    margin-right: 8%;
+    float: right;
+}
+.peijian-maxbox>:nth-child(10)>:nth-child(2){
+    width: 100%;
+    height: 48.5%;
+    text-align: center;
+    padding-top: 20%;
+    background-color: #fff;
+    transition: .3s;
+}
+.peijian-maxbox>:nth-child(10)>:nth-child(2)>:nth-child(1){
+    font-size: 20px;
+}
+.peijian-maxbox>:nth-child(10)>:nth-child(2)>:nth-child(2){
+    font-size: 15px;
+    padding-top: 5%;
+}
+.shipin{
+    width: 1200px;
+    height: 60px;
+    margin: 0 auto;
+}
+.shipin>:nth-child(1){
+    font-size: 25px;
+    font-weight: 200;
+    line-height: 60px;
+}
+.shipin>:nth-child(2){
+    line-height: 60px;
+    font-size: 16px;
+    float: right;
+}
+.shipin>:nth-child(2)::after{
+    content: '>';
+    margin-left: 8px;
+    padding: 4px 8px;
+    line-height: 60px;
+    color: white;
+    background-color: #b0b0b0;
+    border-radius: 50% ;
+}
+.shipin-box{
+    width: 1200px;
+    height: 253px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.shipin-box div{
+    width: 24%;
+    height: 100%;
+    text-align: center;
+    background-color: #fff;
+}
+.shipin-box div img{
+    width: 100%;
+    margin-bottom: 20px;
+}
+#img{
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+.dibudaohanglan{
+    width: 100%;
+    height: 800px;
+    background: #fff;
+}
+.dibudaohanglan-content{
+    width: 1200px;
+    height: 800px;
+    margin: 0 auto;
+}
+.yuyuefuwu{
+    width: 100%;
+    height: 80px;
+    border-bottom: solid 1px #e0e0e0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 25px;
+    font-size: 18px;
+    font-weight: 200;
+    margin-bottom: 20px;
+}
+.yuyuefuwu>:nth-child(2),.yuyuefuwu>:nth-child(4),.yuyuefuwu>:nth-child(6),.yuyuefuwu>:nth-child(8){
+    color: #e0e0e0;
+    font-size: 27px;   
+}
+.bangzhu{
+    width: 80%;
+    height: 45px;
+    line-height: 45px;
+}
+.bangzhu>ul{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px 0 0;
+    font-size: 16px;
+    text-align: center;
+}
+/* 
+.bangzhu>ul>li{
+    margin: 0 20px;
+} */
+.bangzhu-a ul{
+    line-height: 30px;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    position: relative;
+    top: 0;
+}
+.bangzhu-a:hover ul{
+    widows: 100%;
+    height: 90px;
+    transition: .3s;
+}
+.bangzhu-a:nth-child(4):hover ul{
+    width: 100%;
+    height: 150px;
+    transition: .3s;
+}
+.bangzhu-a:nth-child(5):hover ul{
+    width: 100%;
+    height: 120px;
+    transition: .3s;
+}
 
 
 
@@ -538,8 +765,7 @@ nav{
 
 
 
-
-.right{
+/* .right{
     width: 75px;
     height: 55vh;
     border: none;
@@ -568,4 +794,4 @@ nav{
 .right p{
     font-size: 14px;
     color: #757575;
-}
+} */
